...
        }
    }
    
    
    func displayAlert(message: String){
        
        let alert_toDisplay = UIAlertController(title: "Alert", message: message, preferredStyle: .alert)
        
        alert_toDisplay.addAction(UIAlertAction(title: "Ok", style: .default, handler: { action in
            //self.user_city.text = "city"
            //self.user_address.text = "Location"
            //self.user_name.text = "Full Name"
        }))
        self.present(alert_toDisplay, animated: true, completion: nil)
    }
...
